feat: 🎸 remove field "valid" from "/valid" endpoint
BREAKING CHANGE: 🧨 remove field "valid" from "/valid" endpoin
